# Eventfully

./: .all-contributorsrc  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  database.db  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  sonar-project.properties  startup.py  tailwind.config.js
.github/workflows/: codeql.yml  docker-build-push.yml
accessibility _events/: main.py
accessibility_events/: backend.py  categorize.py  database.db  database.py  emails.py  main.py  scraping.py  tags.py  test.py  utils.py
accessibility_events/static/: MyEventWorld.code-workspace  addWindow.js  addWindows.css  eventCardLogik.js  main.css  startlogik.js
accessibility_events/templates/: addWindow.html  eventCard.html  filter.html  filterseting.html  index.html  startPage.html  startseite.html
database/meilisearch/: .gitignore
docs/: .env.example  architecture.md  development-setup.md  dot-env.md  network.drawio  running-in-production.md  use-case.md
eventfully/: categorize.py  config.py  database.py  emails.py  logger.py  main.py  scraping.py  search.py  types.py  utils.py
eventfully/crawl/: main.py  source_list.py
eventfully/crawl/auto_crawl/: config.py  data_wrapper.py  main.py
eventfully/crawl/sources/: berlin.py  boundicca.py  bpb.py  foss.py  jugendhackt.py  jugendhackt_events.py  jugendhackt_labs.py  neanderticket.py  zuerichunbezahlbar.py
eventfully/data/: emails.py  main.py  zuerichunbezahlbar_ch.py
eventfully/database/: crud.py  database.py  models.py  schemas.py
eventfully/routes/: account.py  api.py  index.py  legal_notice.py  utils.py
eventfully/search/: collect.py  crawl.py  main.py  post_processing.py  search.py
eventfully/search/sources/: berlin.py  boundicca.py  bpb.py  eventbrite.py  foss.py  jugendhackt.py  kulturloewen.py  neanderticket.py  zuerichunbezahlbar.py
eventfully/sources/: ai_provider.py  categorize.py  emails.py  eventim.py  kulturloewen.py  main.py  prompts.json  utils.py  zuerichunbezahlbar_ch.py
eventfully/static/: add-to-calendar-button.js  input.css  main.css  output.css
eventfully/templates/: Event erstell seite.html  Gruppen übersicht.html  base.html  create-event.html  default_head.html  events.html  filter.html  filterseting.html  groups.html  imprint.html  index.html  index_base.html  legal_notice.html
eventfully/templates/alte daten/: add_window.html  filter_setting.html
eventfully/templates/api/: events.html  events_alt.html  login_form.html  signup_form.html
eventfully/templates/components/: alert.html  event_card.html  events.html  groups.html  head_links.html  liked-false-button.html  liked-true-button.html  navbar.html  navbar_old.html
eventfully/templates/components/icons/: dollar-sign.html  external-link.html  filter.html  github-mark.html  github.html  heart-empty.html  heart-full.html  log-out.html  map-pin.html  moon.html  search.html  sun.html
locales/: ca.json  ca.yml  cs.json  cs.yml  cze.yml  de.json  de.yml  en.json  en.yml  es.json  es.yml  fr.json  fr.yml  hr.json  hr.yml  nl.json  nl.yml  pl.json  pl.yml  ru.json  ru.yml  sk.json  sk.yml  sv.json  sv.yml  tr.json  tr.yml
tests/: injectTestDataGUI.py  injectTestDataTerminal.py  inject_test_data_terminal.py  test-data.json  test-data.md  test_sources.py  test_utils.py  utils.py
tests/crawl/: test_auto_crawl.py  test_main.py
tests/crawl/auto_crawl/: test_data_wrapper.py
tests/search/: test_sources.py
