[project]
name = "eventfully"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "2mal3", email = "56305732+2mal3@users.noreply.github.com" }
]
dependencies = [
    "flask==3.*",
    "peewee==3.*",
    "python-dotenv==1.*",
    "meilisearch==0.*",
    "pydantic==2.*",
    "Flask-APScheduler==1.*",
    "beartype==0.*",
    "gunicorn==22.*",
    "pytest==8.*",
    "get-project-root==0.*",
    "flask-wtf==1.*",
    "niquests==3.*",
    "beautifulsoup4==4.*",
    "pytailwindcss-extra==0.*",
    "sqids>=0.4.1",
    "pyjwt>=2.8.0",
    "cachetools==5.*",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# Rules are explained here: https://docs.astral.sh/ruff/rules
select = ["E4", "E7", "E9", "F", "C", "N", "A", "SIM", "PL"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
virtual = true  # necessary for docker
managed = true
dev-dependencies = []

[tool.rye.scripts]
dev = "python3 -m eventfully.main"
css-gen = "tailwindcss-extra -i ./eventfully/static/input.css -o ./eventfully/static/output.css --watch"
css-build = "tailwindcss-extra -i ./eventfully/static/input.css -o ./eventfully/static/output.css"
reset-db = "rm -r database/meilisearch/data.ms/ database/sqlite/database.db"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["eventfully"]
