[project]
name = "eventfully"
version = "0.5.0"
description = "Add your description here"
authors = [
    { name = "2mal3", email = "56305732+2mal3@users.noreply.github.com" },
    { name = "Luis Schuimer", email = "85784931+LuisSchuimer@users.noreply.github.com" },
    { name = "BlitzBenedikt", email = "117511666+BlitzBenedikt@users.noreply.github.com" },
]
dependencies = [
    "flask==3.*",
    "peewee==3.*",
    "python-dotenv==1.*",
    "meilisearch==0.33.*",
    "pydantic==2.*",
    "Flask-APScheduler==1.*",
    "gunicorn==23.*",
    "flask-wtf==1.*",
    "niquests==3.*",
    "beautifulsoup4==4.*",
    "pyjwt==2.*",
    "cachetools==5.*",
    "yet-another-i18n==0.2.*",
    "parsel==1.*",
    "jsonpath-ng==1.*",
    "pytz==2025.*",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# Rules are explained here: https://docs.astral.sh/ruff/rules
select = ["E4", "E7", "E9", "F", "C", "N", "A", "SIM", "PL"]
ignore = ["N805"]

[tool.pyright]
ignore = ["**/jugendhackt.py"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
virtual = true # necessary for docker
managed = true
dev-dependencies = [
    "pytest==8.*",
    "ruff==0.11.*",
    "pre-commit==4.*",
    "coverage==7.*",
    "pytest-xdist==3.*",
    "pytest-cov==6.*",
    "pytailwindcss-extra==0.2.*",
]

[tool.rye.scripts]
dev = "python3 -m eventfully.main"
test = "pytest -n 2 -v --cov=eventfully"
css-gen = { cmd = "tailwindcss-extra -i ./eventfully/static/input.css -o ./eventfully/static/output.css --watch", env = { PYTAILWINDCSS_EXTRA_VERSION = "v1.7.27" } }
css-build = { cmd = "tailwindcss-extra -i ./eventfully/static/input.css -o ./eventfully/static/output.css", env = { PYTAILWINDCSS_EXTRA_VERSION = "v1.7.27" } }
reset-db = "rm -r database/meilisearch/data.ms/ database/sqlite/database.db"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["eventfully"]
